# whatssock-server

./: Cargo.toml  README.md  diesel.toml
migrations/2025-07-06-215230_register_user/: up.sql
migrations/2025-07-06-215230_users/: up.sql
migrations/2025-07-08-152154_user_signin_token/: down.sql  up.sql
migrations/2025-07-14-103133_messages/: up.sql
migrations/2025-07-14-103322_chatrooms/: down.sql  up.sql
src/: lib.rs  main.rs  models.rs  schema.rs
src/api/: mod.rs  register.rs  user_account_control.rs
